@@ -4,6 +4,10 @@ Changelog
 2.0a4 - unreleased
 ------------------
 
+* Fix the pretty_title_or_id method from PloneFlare; the implementation
+  was broken, now delegates to the standard Plone implementation.
+  [mj]
+
 
 2.0a3 - 2011-01-26
 ------------------
